alpha/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httbin-poller
  name: httbin-poller
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httbin-poller
  template:
    metadata:
      labels:
        app: httbin-poller
    spec:
      containers:
        - image: busybox
          name: busybox
          command:
            [
              "/bin/sh",
              "-c",
              "while true; do sleep 30; date; wget -qO- --timeout=10 'https://httpbin.org/uuid'; done",
            ]
          resources:
            requests:
              memory: 100Mi
              cpu: 20m
            limits:
              memory: 200Mi
              cpu: 100m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-poller
  name: nginx-poller
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-poller
  template:
    metadata:
      labels:
        app: nginx-poller
    spec:
      containers:
        - image: busybox
          name: busybox
          command:
            [
              "/bin/sh",
              "-c",
              "while true; do sleep 30; date; wget -qO- --timeout=10 'http://nginx.beta.svc.cluster.local:80'; done",
            ]
          resources:
            requests:
              memory: 100Mi
              cpu: 20m
            limits:
              memory: 200Mi
              cpu: 100m
