alpha/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alpha-network-policy
  namespace: alpha
spec:
  podSelector: {} # Deny all ingress and egress by default for any pod
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to: # Allow ingress to nginx pod ofnamespace beta
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: beta
          podSelector:
            matchLabels:
              app: nginx
    - to: # Allow egress to httpbin.org
        - ipBlock:
            cidr: 52.7.224.181/32
        - ipBlock:
            cidr: 35.169.55.235/32
        - ipBlock:
            cidr: 72.44.59.17/32
        - ipBlock:
            cidr: 18.215.122.215/32
        - ipBlock:
            cidr: 3.226.124.170/32
        - ipBlock:
            cidr: 3.231.0.150/32
    - to: # Allow DNS resolution
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
      ports:
        - port: 3306
          protocol: TCP
